# tar_lib

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt
lib/include/: tarlib.hpp
lib/src/: tarlib.cpp
test/: test.cpp
